# debug-probe-hub

./: .gitignore  LICENSE  README.md  config.yml  config_loader.py  debug_dispatcher.py  docker-compose.override.yml.template  docker-compose.yml  generate_docker_compose_probes.py  generate_udev_rules.py  probe_finder.py  probe_status.py  pyproject.toml  server.py  setup.sh
.claude/: settings.local.json
deploy/: QUICKSTART.md  README.md  cloud-init-network.template.yml  cloud-init-network.yml  cloud-init-user-data.template.yml  cloud-init-user-data.yml  install-system-deps.sh
deploy/systemd/: debug-probe-hub-pre-setup.service  debug-probe-hub-setup.service  debug-probe-hub.service
docker/esp32/: Dockerfile
docker/standard/: Dockerfile
docker/wch/: Dockerfile  setup_wch_toolchain.sh
docs/: README.md  api.md  architecture.md  configuration.md  deploy.md  operations.md
